css/404_custom.css
*{
 margin: 0;
 padding: 0;
 box-sizing: border-box;
}

body {
 background-color: var(--a-clr);
}

.container {
  position: relative;
  top: 50vh;
  left: 50vw;
  transform: translate(-50%, -50%);
  height: 50rem;
  max-height: 90vh;
  width: 35rem;
  max-width: 95vw;
  background-color: white;
  padding: 3rem;
  text-align: center;
  border-radius: 1rem;
  box-shadow: 0 0 .5rem var(--a-clr-dark);
}

@media (max-width: 500px) {
  .brief-404 {
    display: none;
  }

  .btns-flex {
    flex-wrap: wrap;
  }
}

.brief-404 {
  margin-top: 4rem;
  font-size: 1.2rem;
}

.location404 {
  color: var(--a-clr);
  font-family: "Code", monospace !important;
  font-size: 1.2rem;
  margin-top: 1rem;
  cursor: pointer;
  text-align: center;
}

.btns-flex {
  position: absolute;
  bottom: 3.5rem;
  left: 50%;
  transform: translate(-50%);
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.nav-button {
  font-size: 1rem;
  padding: .5em 2em;
  border-radius: 115px;
  border: solid 1px black;
  cursor: pointer;
  background-color: var(--custom-background);
  color: var(--custom-color);
  transition: 250ms ease;
  transition-property: background-color, color;
}

.nav-button:hover, .nav-button:focus {
  background-color: transparent;
  color: black !important;
  outline: none !important
}

.nav-button.back-home {
  --custom-background: var(--a-clr);
  --custom-color: black;
}

.nav-button.report-problem {
  --custom-background: var(--a-clr-dark);
  color: white;
}

/* glitch text effect for header */

.header-404 {
  --shadow-color: var(--a-clr-dark);
  font-family: "Code", monospace !important;
  font-weight: 1000;
  font-size: 6.5rem;
  color: var(--a-clr);
  position: relative;
  animation: glitch-main 1500ms infinite linear alternate-reverse;
}
.header-404::before {
  content: attr(data-text);
  font-family: "Code", monospace;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  left: 2px;
  text-shadow: -2px 0 var(--shadow-color);
  clip: rect(44px, 450px, 56px, 0);
  animation: glitch-anime-before 5s infinite linear alternate-reverse;
}
.header-404::after {
  content: attr(data-text);
  font-family: "Code", monospace;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  left: -2px;
  text-shadow: -2px 0 var(--shadow-color), 2px 2px var(--shadow-color);
  clip: rect(44px, 450px, 56px, 0);
  animation: glitch-anime-after 5s infinite linear alternate-reverse;
}

@keyframes glitch-anime-before {
  0% {
    clip: rect(85px, 9999px, 65px, 0);
    transform: skew(0.08deg);
  }
  5% {
    clip: rect(46px, 9999px, 4px, 0);
    transform: skew(0.18deg);
  }
  10% {
    clip: rect(76px, 9999px, 100px, 0);
    transform: skew(0.12deg);
  }
  15% {
    clip: rect(31px, 9999px, 94px, 0);
    transform: skew(0.05deg);
  }
  20% {
    clip: rect(99px, 9999px, 87px, 0);
    transform: skew(0.47deg);
  }
  25% {
    clip: rect(69px, 9999px, 39px, 0);
    transform: skew(0.26deg);
  }
  30% {
    clip: rect(36px, 9999px, 55px, 0);
    transform: skew(1deg);
  }
  35% {
    clip: rect(47px, 9999px, 8px, 0);
    transform: skew(1deg);
  }
  40% {
    clip: rect(5px, 9999px, 13px, 0);
    transform: skew(0.82deg);
  }
  45% {
    clip: rect(67px, 9999px, 60px, 0);
    transform: skew(0.91deg);
  }
  50% {
    clip: rect(57px, 9999px, 46px, 0);
    transform: skew(0.41deg);
  }
  55% {
    clip: rect(72px, 9999px, 41px, 0);
    transform: skew(0.46deg);
  }
  60% {
    clip: rect(80px, 9999px, 79px, 0);
    transform: skew(0.05deg);
  }
  65% {
    clip: rect(83px, 9999px, 30px, 0);
    transform: skew(0.68deg);
  }
  70% {
    clip: rect(39px, 9999px, 62px, 0);
    transform: skew(0.54deg);
  }
  75% {
    clip: rect(80px, 9999px, 92px, 0);
    transform: skew(0.51deg);
  }
  80% {
    clip: rect(75px, 9999px, 81px, 0);
    transform: skew(0.86deg);
  }
  85% {
    clip: rect(64px, 9999px, 97px, 0);
    transform: skew(0.54deg);
  }
  90% {
    clip: rect(70px, 9999px, 63px, 0);
    transform: skew(0.74deg);
  }
  95% {
    clip: rect(11px, 9999px, 94px, 0);
    transform: skew(0.28deg);
  }
}
@keyframes glitch-anime-after {
  0% {
    clip: rect(86px, 9999px, 36px, 0);
    transform: skew(0.09deg);
  }
  5% {
    clip: rect(83px, 9999px, 82px, 0);
    transform: skew(0.85deg);
  }
  10% {
    clip: rect(3px, 9999px, 59px, 0);
    transform: skew(0.03deg);
  }
  15% {
    clip: rect(1px, 9999px, 53px, 0);
    transform: skew(0.73deg);
  }
  20% {
    clip: rect(54px, 9999px, 15px, 0);
    transform: skew(0.64deg);
  }
  25% {
    clip: rect(40px, 9999px, 74px, 0);
    transform: skew(0.4deg);
  }
  30% {
    clip: rect(69px, 9999px, 69px, 0);
    transform: skew(0.96deg);
  }
  35% {
    clip: rect(12px, 9999px, 87px, 0);
    transform: skew(0.81deg);
  }
  40% {
    clip: rect(52px, 9999px, 73px, 0);
    transform: skew(0.61deg);
  }
  45% {
    clip: rect(85px, 9999px, 89px, 0);
    transform: skew(0.07deg);
  }
  50% {
    clip: rect(96px, 9999px, 13px, 0);
    transform: skew(0.73deg);
  }
  55% {
    clip: rect(7px, 9999px, 79px, 0);
    transform: skew(0.43deg);
  }
  60% {
    clip: rect(87px, 9999px, 32px, 0);
    transform: skew(0.64deg);
  }
  65% {
    clip: rect(73px, 9999px, 65px, 0);
    transform: skew(0.18deg);
  }
  70% {
    clip: rect(79px, 9999px, 72px, 0);
    transform: skew(0.69deg);
  }
  75% {
    clip: rect(8px, 9999px, 38px, 0);
    transform: skew(0.55deg);
  }
  80% {
    clip: rect(51px, 9999px, 32px, 0);
    transform: skew(0.14deg);
  }
  85% {
    clip: rect(43px, 9999px, 21px, 0);
    transform: skew(0.43deg);
  }
  90% {
    clip: rect(74px, 9999px, 87px, 0);
    transform: skew(0.4deg);
  }
  95% {
    clip: rect(29px, 9999px, 100px, 0);
    transform: skew(0.81deg);
  }
}
@keyframes glitch-main {
  0% {
    transform: skew(1deg);
  }
  10% {
    transform: skew(4deg);
  }
  20% {
    transform: skew(5deg);
  }
  30% {
    transform: skew(-3deg);
  }
  40% {
    transform: skew(0deg);
  }
  50% {
    transform: skew(2deg);
  }
  60% {
    transform: skew(-4deg);
  }
  70% {
    transform: skew(5deg);
  }
  80% {
    transform: skew(-1deg);
  }
  90% {
  transform: skew(0deg);
  }
}

